Fix: Issue #470 coinslist lowered so filter can be selected and z-index increased

--- a/src/components/coins/FilterBy/FilterBy.css
+++ b/src/components/coins/FilterBy/FilterBy.css
@@ -4,6 +4,7 @@
   right: 0;
   top: 0;
   cursor: pointer;
+  z-index:10000;
 }
 
 
@@ -32,7 +33,7 @@
   color: #212121;
   border-radius: 4px 0px 4px 4px;
   box-shadow: 0px 2px 12px -7px #222;
-  z-index: 301;
+  z-index: 1000;
 }
 
 
