--- a/src/components/coins/coins.css
+++ b/src/components/coins/coins.css
@@ -268,6 +268,11 @@
   top: 25px;
   width: max-content;
 }
+
+.sort-filter{
+  height:30px;
+}
+
 .coin-details-modal .modal-dialog {
   width: 384px;
 }
